fix(filter-sidebar): reorder available filter
And increase max-height since we added the rejected
filter and the last filter was not visible anymore.

--- a/app/components/filter-sidebar/group/styles.scss
+++ b/app/components/filter-sidebar/group/styles.scss
@@ -13,7 +13,7 @@
 }
 
 &.filter-sidebar-group--expanded .filter-sidebar-group-body {
-  max-height: 400px;
+  max-height: 450px;
 }
 
 .filter-sidebar-group-label {
